--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
+            android:hardwareAccelerated="true"
             android:name=".MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait">
